# cimod

./: CMakeLists.txt  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: buid-doc.yml  build_and_upload.yaml  ci-test.yml  codeql.yml  dependabot-auto-merge.yml  lint-format.yml  pages.yml
docs/: index.md
