# Copyright 2020-2025 Jij Inc.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "setuptools_scm[toml]",
    "pybind11>=3.0.0,<4",
]
build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
write_to = "cimod/_version.py"

[tool.scikit-build]
minimum-version = "0.10"
strict-config = true
build.verbose = true
wheel.install-dir = "cimod"
wheel.packages = ["cimod"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["cimod/_version.py"]

[project]
name = "jij-cimod"
dynamic = ["version"]
description = "C++ library for a binary (and polynomial) quadratic model."
requires-python = ">=3.10, <3.15"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Jij Inc.", email = "info@openjij.org"}
]
readme = "README.md"
keywords = ["QUBO", "Ising", "optimization", "binary quadratic model", "BQM", "dimod"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Keep each Python minor on the newest compatible NumPy/SciPy lines.
    "numpy>=1.23.5,<2.3; python_version == '3.10'",
    "numpy>=1.26.4,<2.5; python_version == '3.11'",
    "numpy>=2.0.0,<2.6; python_version >= '3.12' and python_version < '3.14'",
    "numpy>=2.3.2,<2.6; python_version >= '3.14'",
    "scipy>=1.15.3,<1.16; python_version == '3.10'",
    "scipy>=1.17.1,<1.18; python_version == '3.11'",
    "scipy>=1.18,<1.19; python_version >= '3.12'",
    "dimod>=0.12.22,<0.13",
]


[project.urls]
Homepage = "https://www.openjij.org"
Source = "https://github.com/Jij-Inc/cimod"
Documentation = "https://jij-inc.github.io/Cimod-Documentation/"
"Python Documentation" = "https://jij-inc.github.io/cimod/"

[dependency-groups]
build = [
    "build>=1.2",
]

test = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-randomly",
    "pytest-spec",
    "coverage",
]

format = [
    "ruff>=0.5",
]

docs = [
    "matplotlib",
    "breathe",
    "jupyter",
    "jupyter-book",
    "jupyter-cache",
    "sphinx>=7.3",
    "sphinx_sitemap",
    "sphinx-jupyterbook-latex",
    "sphinx-proof",
    "sphinx-comments",
    "sphinx-autobuild",
    "sphinx-inline-tabs",
    "sphinxcontrib-katex",
    "sphinx-autoapi>=3.0.0",
    "sphinx-notfound-page",
    "sphinx-hoverxref",
    "sphinx-examples",
]

dev = [
    {include-group = "build"},
    {include-group = "test"},
    {include-group = "format"},
]

all = [
    {include-group = "dev"},
    {include-group = "docs"},
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --color=yes --code-highlight=yes --cov-context=test --cov --cov-append --cov-report term --randomly-seed=last -v --capture=no"
testpaths = [
    "tests",
]
spec_header_format = "{module_path}:"
spec_test_format = "{result} {name}"
log_level = "INFO"
console_output_style = "count"
log_auto_indent = true
junit_logging = "all"

[tool.ruff]
line-length = 88
target-version = "py310"  # жЬАе∞ПгВµгГЭгГЉгГИзЙИпЉИpython_requires = >=3.10пЉЙ
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "_skbuild",
    "memory-bank",
]

[tool.ruff.lint]
select = [
    # Phase 1: еЯЇжЬђи®≠еЃЪпЉИruffгГЩгВєгГИгГЧгГ©гВѓгГЖгВ£гВєжЇЦжЛ†пЉЙ
    "E",               # pycodestyle errors
    "F",               # Pyflakes
    "I",               # isort
    "UP",              # pyupgrade
]
ignore = [
    "E501",    # и°МйХЈеИґйЩРзД°и¶ЦпЉИжЧҐе≠Ши®≠еЃЪпЉЪmax-line-length = 999пЉЙ
    "UP007",   # typing.Union вЖТ X | Y гБЃжХізРЖгБѓеИ•е§ЙжЫігБЂгБЩгВЛ
    "S101",    # assertдљњзФ®и®±еПѓпЉИpytestзФ®пЉЙ
    "T20",     # printжЦЗи®±еПѓпЉИгГЗгГРгГГгВ∞зФ®пЉЙ
]

# иЗ™еЛХдњЃж≠£еѓЊи±°
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
lines-between-types = 1

[tool.ruff.format]
# blackдЇТжПЫи®≠еЃЪ
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.cibuildwheel]
# musllinuxгБѓгВµгГЭгГЉгГИеѓЊи±°е§ЦпЉИmanylinuxгБЃгБњеѓЊењЬпЉЙ
# cp39дї•дЄЛгБѓrequires-python = ">=3.10"гБЂгВИгВКдЄНи¶Б
# cp31?t гБѓ free-threaded wheel гВТдїКеЫЮгВµгГЭгГЉгГИгБЧгБ™гБДгБЯгВБйЩ§е§Ц
skip = ["*musllinux*", "cp31?t-*"]
build-verbosity = 1
dependency-versions = "latest"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
build-frontend = "build"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:latest" 
repair-wheel-command = "auditwheel repair --lib-sdir . -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
build-frontend = "build"
before-build = [ 
    "pip install --upgrade wheel build cmake ninja", 
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = [ 
    "pip install --upgrade wheel build cmake ninja delvewheel", 
]
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
